...
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.library.qrCodeSummaryStatistics.QrCodeSummaryStatisticsFragment"
    android:id="@+id/fragment_qr_code_summary_statistics_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#F2F2F2"
        tools:ignore="UselessParent">
...
